# hec-dss-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/dss-convert/: Cargo.toml  README.md
crates/dss-convert/src/: main.rs
crates/dss-core/: Cargo.toml  README.md
crates/dss-core/benches/: dss_bench.rs
crates/dss-core/src/: error.rs  file.rs  lib.rs
crates/dss-core/src/format/: bin.rs  datetime.rs  hash.rs  header.rs  io.rs  keys.rs  locking.rs  mod.rs  native.rs  pathname.rs  record.rs  v6.rs  writer.rs
crates/dss-core/tests/: cross_validate.rs  integration.rs  proptest_dss.rs
crates/dss-ffi/: Cargo.toml  README.md
crates/dss-ffi/src/: lib.rs
crates/dss-fortran/: README.md  build.bat  build_and_test.sh  env.sh  hecdss.mod
crates/dss-fortran/src/: hecdss_mod.f90
crates/dss-fortran/test/: test_hecdss.f90
crates/dss-python/: Cargo.toml  README.md  pyproject.toml
crates/dss-python/src/: lib.rs
crates/dss-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/dss-sys/src/: lib.rs
docs/: book.toml  user-guide.md
docs/src/: SUMMARY.md  concepts.md  getting-started.md  introduction.md
docs/src/api/: datetime.md  ffi.md  fortran.md  python.md  rust.md
docs/src/tutorials/: aliases.md  arrays.md  change-tracking.md  conversion.md  file-management.md  grids.md  location.md  paired-data.md  text.md  timeseries.md
