[package]
name = "dss-core"
description = "Safe Rust interface for HEC-DSS version 7 files"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dss-sys = { path = "../dss-sys" }
thiserror = "2"
fs2 = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "dss_bench"
harness = false
