[package]
name = "dss-core"
description = "Pure Rust implementation of HEC-DSS version 7 file format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/hatch-tyler/hec-dss-rs"
keywords = ["hec-dss", "hydrology", "dss", "usace", "water-resources"]
categories = ["science", "parser-implementations"]

[dependencies]
dss-sys = { path = "../dss-sys" }
thiserror = "2"
fs2 = "0.4"
flate2 = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "dss_bench"
harness = false
