[package]
name = "dss-sys"
description = "Raw FFI bindings to the HEC-DSS (hecdss) shared library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/hatch-tyler/hec-dss-rs"
keywords = ["hec-dss", "hydrology", "ffi", "usace"]
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "hecdss"
